Summary: | ASTERISK-30314: res_agi: RECORD FILE doesn't respect "transmit_silence" asterisk.conf option | ||
Reporter: | Joshua C. Colp (jcolp) | Labels: | |
Date Opened: | 2022-11-16 05:39:36.000-0600 | Date Closed: | 2022-11-21 06:27:23.000-0600 |
Priority: | Minor | Regression? | No |
Status: | Closed/Complete | Components: | Resources/res_agi |
Versions: | 18.15.0 20.0.0 | Frequency of Occurrence | |
Related Issues: | |||
Environment: | Attachments: | ||
Description: | The "RECORD FILE" implementation in res_agi doesn't use the normal API for doing recording but has its own. This has resulted in it not obeying the "transmit_silence" option in asterisk.conf | ||
Comments: | By: Friendly Automation (friendly-automation) 2022-11-21 06:27:24.155-0600 Change 19580 merged by Friendly Automation: res_agi: Respect "transmit_silence" option for "RECORD FILE". [https://gerrit.asterisk.org/c/asterisk/+/19580|https://gerrit.asterisk.org/c/asterisk/+/19580] By: Friendly Automation (friendly-automation) 2022-11-21 06:45:35.233-0600 Change 19557 merged by Friendly Automation: res_agi: Respect "transmit_silence" option for "RECORD FILE". [https://gerrit.asterisk.org/c/asterisk/+/19557|https://gerrit.asterisk.org/c/asterisk/+/19557] By: Friendly Automation (friendly-automation) 2022-11-21 07:25:07.060-0600 Change 19567 merged by George Joseph: res_agi: Respect "transmit_silence" option for "RECORD FILE". [https://gerrit.asterisk.org/c/asterisk/+/19567|https://gerrit.asterisk.org/c/asterisk/+/19567] By: Friendly Automation (friendly-automation) 2022-11-21 07:25:34.727-0600 Change 19559 merged by George Joseph: res_agi: Respect "transmit_silence" option for "RECORD FILE". [https://gerrit.asterisk.org/c/asterisk/+/19559|https://gerrit.asterisk.org/c/asterisk/+/19559] |